# ansible-lint-issue-1354

./: .gitignore  README.md  playbook.yml  pyproject.toml  requirements.yml
roles/foo/tasks/: main.yml
